<resources>
    <string name="app_name">PizzaHub</string>
    <string name="web_client_id">974100330093-91o69rnk02tpph00k95qhls5okun914v.apps.googleusercontent.com</string>
    <string name="admin_identifier">admin1337</string>
    <string name="admin_pw">$2a$10$JaxfLpdWuE7Dgm1xGay70.Wm5uUhe7kaaYI6aLZDVoXb6L36l5Muy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="sides_list">
        <item>Side Type</item>
        <item>Sides</item>
        <item>Drinks</item>
    </string-array>
    <string name="default_text">Lorem Ipsum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_button_text">Email</string>
    <string name="google_button_text">Google</string>
    <string name="string_google_button_text">Google</string>
    <string name="login_button_text">Log In</string>
    <string name="email_input_text">someone@example.com</string>
    <string name="password_input_text">********</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="signup_link_text"><u>Sign Up!</u></string>
    <string name="signup_prompt_text">Don\'t have any account?</string>
    <string name="login_prompt_text">Already have an account?</string>
    <string name="login_link_text"><u>Log In!</u></string>
    <string name="ph_name">Pizza Hub</string>
    <string name="order_cancelled_title">Order Cancelled!</string>
    <string name="go_to_main_menu">Go to Main Menu</string>
    <string name="order_success">Order Success!</string>
    <string name="order_number_order_success">Order Number #123456789</string>
    <string name="total_price_order_success">Total Price: $31.22</string>
    <string name="home_title">Menu</string>
    <string name="admin_link"><u>Admin</u></string>
    <string name="cancel_button">Cancel</string>
    <string name="continue_button">Continue</string>
    <string name="delivery_location_title">Delivery Location</string>
    <string name="search_location_input">Search Location</string>
    <string name="name_input">Name</string>
    <string name="address_1_input">Address 1</string>
    <string name="address_2_input">Address 2</string>
    <string name="city_input">City</string>
    <string name="province_input">Province</string>
    <string name="postal_code_input">Postal Code</string>
    <string name="order_pizza_title">Order Pizza</string>
    <string name="customize_pizza_title">Customize Pizza</string>
    <string name="order_history_title">Order History</string>
    <string name="order_saved">Order Saved</string>
    <string name="order_list_title">Order List</string>
    <string name="create_button">Create</string>
    <string name="add_to_list_button">Add</string>
    <string name="pizza_ingredient_input">Pizza Ingredient</string>
    <string name="add_premade_title">Add Premade</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="logout">Log Out</string>
    <string name="admin_id">Admin ID</string>
    <string name="admin_password">Admin Password</string>
    <string name="another_account_prompt">Want to log in using another account?</string>
    <string name="another_account_link"><u>Sign In Options</u></string>
    <string name="go_back_link"><u><![CDATA[< Go Back]]></u></string>
    <string name="premade_pizza">Premade Pizza</string>
    <string name="sides">Sides</string>
    <string name="drinks">Drinks</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="main_fab">Main FAB</string>
    <string name="logout_fab">Logout FAB</string>
    <string name="history_fab">History FAB</string>
    <string name="save_fab">Save FAB</string>
    <string name="home_fab">Home FAB</string>
    <string name="item_image">Item Image</string>
    <string name="save">Save</string>
    <string name="size">Size</string>
    <string name="list_of_toppings">List of Toppings</string>
    <string name="customize">Customize</string>
    <string name="menu_button">Go to Ordering Page</string>
    <string name="finish">Finish</string>
    <string name="default_size">https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Small_pizzas.jpg/640px-Small_pizzas.jpg</string>
    <string name="paypal_id">AURHheWr8UlBDOL63Sh6Qb1z6S3RkiM2kvXWXIFXkirLm1NPkHVDfnm5Hyj38cRT40vWJRc3m_jLCvq7</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="payment_api_string">https://pizzahub-payment.herokuapp.com/</string>
    <string name="go_back"><![CDATA[< Back]]></string>
    <string name="drinks_fab">Drinks FAB</string>
    <string name="sides_fab">Sides FAB</string>
    <string name="toppings_fab">Toppings FAB</string>
    <string name="premade_fab">Premade FAB</string>
    <string name="admin_toppings">Toppings</string>
    <string name="topping_type">Topping Type</string>
    <string name="topping_name">Topping Name</string>
    <string name="topping_image_url">Topping Image URL</string>
    <string name="topping_price">Topping Price</string>
    <string name="reset_button">Reset</string>
    <string name="drink_price">Drink Price</string>
    <string name="drink_image_url">Drink Image URL</string>
    <string name="drink_name">Drink Name</string>
    <string name="premade_name">Premade Name</string>
    <string name="premade_image_url">Premade Image URL</string>

    <string-array name="topping_types">
        <item>seafood</item>
        <item>vegetable</item>
        <item>meat</item>
        <item>cheese</item>
        <item>sauce</item>
        <item>fruit</item>
    </string-array>
</resources>