<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".fragments.base.HomeFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonHome"
        style="@style/fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home_fab"
        android:src="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/yellow" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonOrder"
        style="@style/fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_baseline_menu_book_24"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/yellow"
        android:contentDescription="@string/menu_button"
        android:focusable="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonHistory"
        style="@style/fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/history_fab"
        android:src="@drawable/ic_baseline_archive_24"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/yellow" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonMain"
        style="@style/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/yellow"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonSave"
        style="@style/fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save_fab"
        android:src="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/yellow" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonLogout"
        style="@style/fab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logout_fab"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/yellow" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHomePremade"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHomePremadeTitle" />

            <TextView
                android:id="@+id/textViewHomePremadeTitle"
                style="@style/section_header"
                android:layout_marginTop="8dp"
                android:text="@string/premade_pizza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textViewHomeSidesTitle"
                style="@style/section_header"
                android:layout_marginTop="8dp"
                android:text="@string/sides"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomePremade" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHomeSides"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHomeSidesTitle" />

            <TextView
                android:id="@+id/textViewHomeDrinksTitle"
                style="@style/section_header"
                android:layout_marginTop="8dp"
                android:text="@string/drinks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeSides" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylerViewHomeDrinks"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHomeDrinksTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>