<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".fragments.SignInOptionsFragment">

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/string_google_button_text"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEmail"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonEmail"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/email_button_text"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonGoogle"
        app:layout_constraintStart_toStartOf="@+id/buttonGoogle"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewAdminLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/admin_link"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        style="@style/ph_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>